--- a/docker/php-fpm/7.0/00-xdebug.ini
+++ b/docker/php-fpm/7.0/00-xdebug.ini
@@ -1,8 +1,9 @@
 zend_extension=xdebug.so
-error_reporting = E_ALL
-display_startup_errors = On
-display_errors = On
-xdebug.remote_enable = 1
-xdebug.remote_connect_back = 1
+xdebug.remote_host=#IP_ADDRESS#
+xdebug.remote_autostart=1
 xdebug.idekey = #XDEBUG_IDE_KEY#
+xdebug.default_enable = 0
+xdebug.remote_enable = 1
+xdebug.remote_connect_back = 0
+xdebug.profiler_enable = 1
 xdebug.remote_port = #XDEBUG_REMOTE_PORT#
