--- a/docker/php-fpm/7.0/00-xdebug.ini
+++ b/docker/php-fpm/7.0/00-xdebug.ini
@@ -1,9 +1,12 @@
 zend_extension=xdebug.so
-xdebug.remote_host=#IP_ADDRESS#
-xdebug.remote_autostart=1
-xdebug.idekey = #XDEBUG_IDE_KEY#
-xdebug.default_enable = 0
+xdebug.default_enable = 1
 xdebug.remote_enable = 1
-xdebug.remote_connect_back = 0
-xdebug.profiler_enable = 1
+xdebug.remote_handler = dbgp
 xdebug.remote_port = #XDEBUG_REMOTE_PORT#
+xdebug.remote_autostart=1
+xdebug.remote_connect_back = 0
+xdebug.remote_host=#IP_ADDRESS#
+xdebug.max_nesting_level = 256
+xdebug.idekey = #XDEBUG_IDE_KEY#
+xdebug.profiler_enable = 1
+
