--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
                 TIME_ZONE: ${TIME_ZONE}
                 PHP_FPM_PORT: ${PHP_FPM_PORT}
                 IP_ADDRESS: ${IP_ADDRESS}
+                USER_EMAIL: ${USER_EMAIL}
+                USER_NAME: ${USER_NAME}
         restart: always
         ports:
             - "${SSH_PUBLIC_PORT}:22"
