--- a/docker/php-fpm/7.1/Dockerfile
+++ b/docker/php-fpm/7.1/Dockerfile
@@ -4,6 +4,7 @@ MAINTAINER Scott Collier <scott@onlinespaces.com>
 ARG PROJECT_NAME
 ARG XDEBUG_IDE_KEY
 ARG XDEBUG_REMOTE_PORT
+ARG XDEBUG_REMOTE_CONNECT_BACK
 ARG TIME_ZONE
 ARG PHP_FPM_PORT
 ARG IP_ADDRESS
@@ -152,6 +153,7 @@ RUN sed -i "s/listen = 127.0.0.1:9000/listen = 127.0.0.1:${PHP_FPM_PORT}/g" /usr
     sed -i "s/listen = 127.0.0.1:9000/listen = 127.0.0.1:${PHP_FPM_PORT}/g" /usr/local/etc/php-fpm.d/www.conf.default && \
     sed -i "s/#XDEBUG_IDE_KEY#/${XDEBUG_IDE_KEY}/g" /usr/local/etc/php/conf.d/00-xdebug.ini && \
     sed -i "s/#XDEBUG_REMOTE_PORT#/${XDEBUG_REMOTE_PORT}/g" /usr/local/etc/php/conf.d/00-xdebug.ini && \
+    sed -i "s/#XDEBUG_REMOTE_CONNECT_BACK#/${XDEBUG_REMOTE_CONNECT_BACK}/g" /usr/local/etc/php/conf.d/00-xdebug.ini && \
     sed -i "s/#IP_ADDRESS#/${IP_ADDRESS}/g" /usr/local/etc/php/conf.d/00-xdebug.ini && \
     sed -i "s/#PHP_FPM_PORT#/${PHP_FPM_PORT}/g" /etc/supervisor/conf.d/supervisord.conf && \
     sed -i "s/#USER_EMAIL#/${USER_EMAIL}/g" /root/.gitconfig && \
