--- a/docker/php-fpm/7.1/00-xdebug.ini
+++ b/docker/php-fpm/7.1/00-xdebug.ini
@@ -4,7 +4,7 @@ xdebug.remote_enable = 1
 xdebug.remote_handler = dbgp
 xdebug.remote_port = #XDEBUG_REMOTE_PORT#
 xdebug.remote_autostart=1
-xdebug.remote_connect_back = 0
+xdebug.remote_connect_back = #XDEBUG_REMOTE_CONNECT_BACK#
 xdebug.remote_host=#IP_ADDRESS#
 xdebug.max_nesting_level = 256
 xdebug.idekey = #XDEBUG_IDE_KEY#
