--- a/docker/php-fpm/7.1/Dockerfile
+++ b/docker/php-fpm/7.1/Dockerfile
@@ -34,6 +34,9 @@ RUN export TERM=xterm && \
     libicu-dev \
     libpq-dev \
     libpng12-dev \
+    libgd-dev \
+    libfreetype6-dev \
+    libjpeg62-turbo-dev \
     libmemcached-dev \
     libmcrypt-dev \
     libldap2-dev \
@@ -63,7 +66,9 @@ RUN curl -Ss https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
 
 # PHP
 RUN pecl install xdebug zip && \
-    docker-php-ext-install mcrypt opcache intl pdo pdo_mysql gd exif && \
+    docker-php-ext-install mcrypt opcache intl pdo pdo_mysql exif iconv && \
+    docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ && \
+    docker-php-ext-install gd && \
     docker-php-ext-enable opcache mcrypt xdebug zip exif && \
 
     mkdir -p /var/log/supervisor && \
@@ -160,7 +165,7 @@ RUN sed -i "s/listen = 127.0.0.1:9000/listen = 127.0.0.1:${PHP_FPM_PORT}/g" /usr
     sed -i "s/#USER_EMAIL#/${USER_EMAIL}/g" /root/.gitconfig && \
     sed -i "s/#USER_NAME#/${USER_NAME}/g" /root/.gitconfig
 
-EXPOSE 22 ${XDEBUG_REMOTE_PORT}
+EXPOSE 22
 WORKDIR /var/www/${PROJECT_NAME}
 
 CMD ["/usr/bin/supervisord"]
