--- a/docker/nginx/conf.d/symfony.conf
+++ b/docker/nginx/conf.d/symfony.conf
@@ -4,55 +4,53 @@ server {
     server_name #DOMAIN_NAME#;
     root /var/www/#PROJECT_NAME#/#WEBSITE_DIR#;
 
-    index index.html index.htm index.php app_dev.php app.php;
-
-    charset utf-8;
-
     location / {
-        try_files $uri $uri/ /app_dev.php?$query_string;
+        # try to serve file directly, fallback to app.php
+        try_files $uri /app.php$is_args$args;
     }
-
-    location = /favicon.ico { access_log off; log_not_found off; }
-    location = /robots.txt  { access_log off; log_not_found off; }
-
-     error_log /var/log/nginx/#PROJECT_NAME#_error.log;
-     access_log /var/log/nginx/#PROJECT_NAME#_access.log;
-
-    sendfile off;
-
-    client_max_body_size 100m;
-
     # DEV
-    location ~ ^/(app|app_dev|app_test|config)\.php(/|$) {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        # fastcgi_pass unix:/var/run/php/php7.0-fpm.sock;
+    # This rule should only be placed on your development environment
+    # In production, don't include this and don't deploy app_dev.php or config.php
+    location ~ ^/(app_dev|config)\.php(/|$) {
         fastcgi_pass php-upstream;
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-
-        fastcgi_intercept_errors off;
-        fastcgi_buffer_size 16k;
-        fastcgi_buffers 4 16k;
+        # When you are using symlinks to link the document root to the
+        # current version of your application, you should pass the real
+        # application path instead of the path to the symlink to PHP
+        # FPM.
+        # Otherwise, PHP's OPcache may not properly detect changes to
+        # your PHP files (see https://github.com/zendtech/ZendOptimizerPlus/issues/126
+        # for more information).
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
     }
-
     # PROD
     location ~ ^/app\.php(/|$) {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        # fastcgi_pass unix:/var/run/php/php7.0-fpm.sock;
         fastcgi_pass php-upstream;
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-
-        fastcgi_intercept_errors off;
-        fastcgi_buffer_size 16k;
-        fastcgi_buffers 4 16k;
+        # When you are using symlinks to link the document root to the
+        # current version of your application, you should pass the real
+        # application path instead of the path to the symlink to PHP
+        # FPM.
+        # Otherwise, PHP's OPcache may not properly detect changes to
+        # your PHP files (see https://github.com/zendtech/ZendOptimizerPlus/issues/126
+        # for more information).
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
+        # Prevents URIs that include the front controller. This will 404:
+        # http://domain.tld/app.php/some-path
+        # Remove the internal directive to allow URIs like this
         internal;
     }
 
-    location ~ /\.ht {
-        deny all;
+    # return 404 for all other php files not matching the front controller
+    # this prevents access to other php files you don't want to be accessible.
+    location ~ \.php$ {
+      return 404;
     }
 
-    # ssl_certificate     /etc/nginx/ssl/symfony.app.crt;
-    # ssl_certificate_key /etc/nginx/ssl/symfony.app.key;
+     error_log /var/log/nginx/#PROJECT_NAME#_error.log;
+     access_log /var/log/nginx/#PROJECT_NAME#_access.log;
 }
