Add php and nginx configs

--- a/docker/nginx/conf.d/drupal8.conf
+++ b/docker/nginx/conf.d/drupal8.conf
@@ -74,6 +74,7 @@ server {
         fastcgi_param QUERY_STRING $query_string;
         fastcgi_intercept_errors on;
         fastcgi_pass php-upstream;
+		fastcgi_read_timeout 600;
     }
 
     # Fighting with Styles? This little gem is amazing.
