--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -15,7 +15,7 @@ http {
   sendfile on;
   tcp_nopush on;
   tcp_nodelay on;
-  keepalive_timeout 65;
+  keepalive_timeout 900;
   types_hash_max_size 2048;
   # server_tokens off;
 
@@ -52,7 +52,7 @@ http {
   # gzip_buffers 16 8k;
   # gzip_http_version 1.1;
   # gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
+  fastcgi_read_timeout 600;
 
   ##
   # Virtual host Configs
