--- a/docker/php-fpm/7.1/supervisord.conf
+++ b/docker/php-fpm/7.1/supervisord.conf
@@ -6,3 +6,13 @@ command=sed -i "s/listen = \[\:\:\]\:9000/listen = \[\:\:\]\:#PHP_FPM_PORT#/g" /
 
 [program:sshd]
 command=/usr/sbin/sshd -D
+
+[program:php-fpm]
+command=/usr/local/sbin/php-fpm -c /usr/local/etc/php-fpm.d/www.conf
+autostart=true
+autorestart=true
+priority=5
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
