--- a/docker/php-fpm/7.1/supervisord.conf
+++ b/docker/php-fpm/7.1/supervisord.conf
@@ -2,13 +2,14 @@
 nodaemon=true
 
 [program:script_1]
-command=sed -i "s/listen = \[\:\:\]\:9000/listen = \[\:\:\]\:#PHP_FPM_PORT#/g" /usr/local/etc/php-fpm.d/zz-docker.conf
+command=sed -i "s/listen = \[\:\:\]\:9000/listen = \[\:\:\]\:#PHP_FPM_PORT#/g" /etc/php/7.1/fpm/pool.d/zz-docker.conf
 
 [program:sshd]
 command=/usr/sbin/sshd -D
 
 [program:php-fpm]
-command=/usr/local/sbin/php-fpm -c /usr/local/etc/php-fpm.d/www.conf
+command=/usr/sbin/php-fpm7.1 -c /etc/php/7.1/fpm/pool.d/www.conf -F
+#command=service php7.1-fpm start
 autostart=true
 autorestart=true
 priority=5
